# ggufy

./: .gitignore  .trufflehog-excludes.txt  AGENTS.md  Cargo.toml  GITHUB_ACTIONS_SETUP.md  INSTALL.md  README.md  breakdown.md  cosign.pub  llms.txt  pyproject.toml
.github/workflows/: README.md  auto-sanitize.yml  brew-formula.yml  ci.yml  codeql.yml  crates-publish.yml  detect-secrets.yml  pqc-audit.yml  pypi-publish.yml  release.yml  reusable-sanitize.yml  reusable-secret-scan.yml  secret-scan.yml  secrets.yml  verify-signatures.yml  zap-scan.yml
.trae/documents/: Codebase Review, README Verification, and GGUF Usage Coverage.md  Commit and Push Changes to Main.md  Verify ggufy Build and Commands.md
docs/: llama_cpp_overview.md
formula/: ggufy.rb
knowledge-base/: SECURITY_IMPLEMENTATION.md
models/: LiquidAI_LFM2-1.2B-GGUF_LFM2-1.2B-Q4_K_M.gguf  LiquidAI_LFM2-8B-A1B-GGUF_LFM2-8B-A1B-Q4_K_M.gguf  LiquidAI_LFM2-VL-3B-GGUF_LFM2-VL-3B-F16.gguf  LiquidAI_LFM2-VL-3B-GGUF_LFM2-VL-3B-Q4_0.gguf  LiquidAI_LFM2-VL-3B-GGUF_mmproj-LFM2-VL-3B-F16.gguf  LiquidAI_LFM2-VL-3B-GGUF_mmproj-LFM2-VL-3B-Q8_0.gguf  mradermacher_VibeThinker-1.5B-GGUF_VibeThinker-1.5B.Q8_0.gguf  sha256-06507c7b42688469c4e7298b0a1e16deff06caf291cf0a5b278c308249c3e439  sha256-0800cbac9c2064dde519420e75e512a83cb360de3ad5df176185dc69652fc515  sha256-1aefcd9a8a15091b670951963b5f8a7e6653bb1350345e9621e179685ac9bc5f  sha256-27d24c87a53d110b95abecbff83f966206857a9dc0ba1efd336d08dbd0afc833  sha256-2b0cf8f17b4c723c27303015383c27ec4bf2d8314bb677d05e920dd70bb0f16b  sha256-38e8dcc30df4eb0e29eaf5c74ba6ce3f2cd66badad50768fc14362acfb8b8cb6  sha256-3d0b790534fe4b79525fc3692950408dca41171676ed7e21db57af5c65ef6ab6  sha256-3e4cb14174460404e7a233e531675303b2fbf7749c02f91864fe311ab6344e4f  sha256-3fcd3febec8b3fd64435204db75bf0dd73b91e8d0661e0331acfe7e7c3120b85  sha256-431e956cac90a7e4d36a9b37bb086c413491c598bb51f90ada8e0c75d0219645  sha256-4d464be24899cf8dc1862945432e0cef4366c4181fa38b14754cc9279b727608  sha256-551fc8b33f100c13d056e114b4e352bd4f2763240b68283076110203da8f5843  sha256-5c7ac4aead1bcf4c8da9534ed72cc632d005aeed6547f1e8662ccdfae688364e  sha256-6c02683809a8dc4eb05c78d44bc63bcd707703b078998fa58829c858ab337bb0  sha256-735af2139dc652bf01112746474883d79a52fa1c19038265d363e3d42556f7a2  sha256-74701a8c35f6c8d9a4b91f3f3497643001d63e0c7a84e085bed452548fa88d45  sha256-7f4030143c1c477224c5434f8272c662a8b042079a0a584f0a27a1684fe2e1fa  sha256-9c60bdd691c1897bbfe5ddbc67336848e18c346b7ee2ab8541b135f208e5bb38  sha256-a3de86cd1c132c822487ededd47a324c50491393e6565cd14bafa40d0b8e686f  sha256-a658c903bf83a9d84fe1b9869874229ddfdfc1c88b04f958f17dd24e243d262c  sha256-a99b7f834d754b88f122d865f32758ba9f0994a83f8363df2c1e71c17605a025  sha256-aeda25e63ebd698fab8638ffb778e68bed908b960d39d0becc650fa981609d25  sha256-c698c78e895740f0e707eb7f8e92894f83f6d5b3f2f2f0b446dfe9635fa0063e  sha256-e91ed0248d43dd4f6e3876bf0cb50b2a18cb7af48f3bfc42880aab7f4da78b01-partial  sha256-ebabfa59b71a5b96e0281ec2994977e785284e0939807a99fc340dec3c6f10de  sha256-ed12a4674d727a74ac4816c906094ea9d3119fbea46ca93288c3ce4ffbe38c55  sha256-f29248184ca766350e56e6d161c2a637ad302a6d595e15d4a62cd58327a0ac0e  sha256-f4dd2368e6c32725dc1c5c5548ae9ee2724d6a79052952eb50b65e26288022c4
src/: main.rs
tests/: integration.rs  run.sh
uv-shim/: pyproject.toml
uv-shim/ggufy_cli/: __main__.py
