[package]
name = "ggufy"
version = "0.1.2"
edition = "2021"
description = "Unified GGUF wrapper for llama.cpp and Ollama"
license-file = "LICENSE"
repository = "https://github.com/nbiish/ggufy"
readme = "README.md"

[features]
default = ["simple-bin"]
simple-bin = []

[[bin]]
name = "ggufy"
path = "src/main.rs"

[[bin]]
name = "ggufy-simple"
path = "src/bin/ggufy-simple.rs"
required-features = ["simple-bin"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.5"
regex = "1.11"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"